testdata/baselines/reference/submodule/conformance/typeOfThisInStaticMembers8(target=es6).errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
typeOfThisInStaticMembers8.ts(5,49): error TS2339: Property 'f' does not exist on type '(Anonymous class)'.
typeOfThisInStaticMembers8.ts(11,22): error TS2339: Property 'f' does not exist on type 'CC'.
typeOfThisInStaticMembers8.ts(13,29): error TS2339: Property 'f' does not exist on type 'CC'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== typeOfThisInStaticMembers8.ts (3 errors) ====
    class C {
        static f = 1;
        static arrowFunctionBoundary = () => this.f + 1;
        static functionExprBoundary = function () { return this.f + 2 };
        static classExprBoundary = class { a = this.f + 3 };
                                                    ~
!!! error TS2339: Property 'f' does not exist on type '(Anonymous class)'.
        static functionAndClassDeclBoundary = (() => {
            function foo () {
                return this.f + 4
            }
            class CC {
                a = this.f + 5
                         ~
!!! error TS2339: Property 'f' does not exist on type 'CC'.
                method () {
                    return this.f + 6
                                ~
!!! error TS2339: Property 'f' does not exist on type 'CC'.
                }
            }
        })();
    }
    